<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:backgroundTint="@color/cardview_shadow_start_color"/>


    </LinearLayout>

    <Button
        android:id="@+id/main_enter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:gravity="center"
        android:text="@string/click_to_enter"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
    //---------------------------------------------------------------------
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

    <Button
        android:id="@+id/reserve_sits_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/reserve_sits"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:layout_weight="2.5" />

    <TextView
        android:id="@+id/reservation_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    </LinearLayout>

    //---------------------------------------------------------------------

    <TextView
        android:id="@+id/performed_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/performed_by"
        android:textColor="#CD5858"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</LinearLayout>