<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="40dp">

        <ImageButton
            android:id="@+id/reservation_to_opt_btn"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:background="@color/cardview_shadow_start_color"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        //-----------------------------------------------------------------

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        //-----------------------------------------------------------------

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_amount_of_sits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_sits"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        //-----------------------------------------------------------------

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_payment_methode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_payment"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_margin="20dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>