<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/vegan1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/food_to_opt_btn"
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.04"
                        android:background="@color/cardview_dark_background"
                        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

                    <Button
                        android:id="@+id/vegan1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:gravity="center"
                        android:text="@string/house_salad_meal"
                        android:textAllCaps="false"
                        android:textSize="24sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>

            </LinearLayout>

            //----------------------------------------------------

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="horizontal"
                android:background="@drawable/vegan2">

                <Button
                    android:id="@+id/vegan2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:gravity="center"
                    android:text="@string/vegetable_salad_meal"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            //----------------------------------------------------

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="horizontal"
                android:background="@drawable/drink1">

                <Button
                    android:id="@+id/drink1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:gravity="center"
                    android:text="@string/squeezed_drink"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            //----------------------------------------------------

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="horizontal"
                android:background="@drawable/drink2">

                <Button
                    android:id="@+id/drink2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:gravity="center"
                    android:text="@string/cocktail_drink"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>