<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/main_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/opt_to_menu_btn"
                        android:layout_width="129dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:background="@color/cardview_dark_background"
                        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/veganSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/not_vegan_vegan"
                        android:textColor="#2C8E09"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <Button
                    android:id="@+id/main_menu_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardview_shadow_end_color"
                    android:gravity="center"
                    android:text="@string/main_menu"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </LinearLayout>

        //--------------------------------------------------------

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.1"
            android:background="@drawable/reservation">

            <Button
                android:id="@+id/reservation_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_end_color"
                android:gravity="center"
                android:text="@string/reservation"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>